@@ -127,3 +127,11 @@ noosfere pages it seems that: b stand for bold, <i>/<i> with i stands for italic
 needs verification.
 
 https://www.noosfere.org/icarus/livres/EditionsLivre.asp?numitemsommaire=20538 reports erreur '80020009' /modules/arrangetitre.inc, ligne 27
+
+les listes Thematiques semblent avoir toutes un problème... Erreur d'exécution Microsoft VBScript erreur '800a000d' exemple:
+https://www.noosfere.org/livres/contenu_oeuvre.asp?NumTheme=57&NumLivre=-320249&NumReferent=4&NomTheme=Drogues
+https://www.noosfere.org/livres/contenu_oeuvre.asp?NumLivre=-318188&NumTheme=37&NumReferent=3&NomTheme=Ecologie
+https://www.noosfere.org/livres/contenu_oeuvre.asp?NumLivre=-318188&NumTheme=36&NumReferent=3&NomTheme=Dystopie
+https://www.noosfere.org/livres/contenu_oeuvre.asp?NumLivre=1655&NumTheme=56&NumReferent=1&NomTheme=Andro%EFde
+on y accede par l'onglet "Infos & actus" puis par le menu a gauche "Plan du site" et dans le texte "fonds documentaire" "par thèmes"... dans
+certains thèmes, sous la phrase "Des ouvrages ont établi des listes sur ce thème :"
